[gd_scene load_steps=5 format=3 uid="uid://hpovewrlirmj"]

[ext_resource type="Script" path="res://Scripts/Exit.gd" id="1_554ef"]
[ext_resource type="Texture2D" uid="uid://d4fcri6ccucgj" path="res://Sprites/end.png" id="2_02oit"]
[ext_resource type="FontFile" uid="uid://deydlwbpht51a" path="res://VCR_OSD_MONO_1.001.ttf" id="3_nt4ft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r5r5r"]
size = Vector2(126, 124)

[node name="Exit" type="Node2D"]
process_mode = 3
script = ExtResource("1_554ef")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -3)
scale = Vector2(4.0625, 4.0625)
texture = ExtResource("2_02oit")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_r5r5r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Retry" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -15.5
offset_right = 28.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Retry?"

[node name="Next" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = 29.0
offset_right = 29.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Next"

[node name="Quit" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = 73.5
offset_right = 21.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Label" type="Label" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -117.0
offset_right = 246.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_nt4ft")
theme_override_font_sizes/font_size = 60
text = "LEVEL CLEAR!!!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="pressed" from="CanvasLayer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CanvasLayer/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CanvasLayer/Quit" to="." method="_on_quit_pressed"]
